syntax = "proto3";

package auth;

option go_package = "realtime-chat/pkg/auth/proto";

service AuthService {
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  string user_id = 1;
}